Table formatting and Voice/Data are fixed.

--- a/templates/Customer.html
+++ b/templates/Customer.html
@@ -59,6 +59,8 @@
         <th>Validity</th>
         <th>Tariff</th>
         <th>Rental</th>
+        <th>Col1</th>
+        <th>Col2</th>
     </tr>
     </thead>
     <tbody>
@@ -69,6 +71,8 @@
         <td>{{row[2]}}</td>
         <td>{{row[3]}}</td>
         <td>{{row[4]}}</td>
+        <td>{{row[5]}}</td>
+        <td>{{row[6]}}</td>
     </tr>
     {% endfor %}
     </tbody>
