--- a/templates/Customer.html
+++ b/templates/Customer.html
@@ -78,13 +78,14 @@
     <table>
         <thead>
     <tr>
+        <th>Plan ID</th>
         <th>Name</th>
         <th>Type</th>
         <th>Validity</th>
         <th>Tariff</th>
         <th>Rental</th>
-        <th>Col1</th>
-        <th>Col2</th>
+        
+        
     </tr>
     </thead>
     <tbody>
@@ -92,11 +93,11 @@
     <tr>
         <td>{{row[0]}}</td>
         <td>{{row[1]}}</td>
-        <td>{{row[2]}}</td>
-        <td>{{row[3]}}</td>
-        <td>{{row[4]}}</td>
-        <td>{{row[5]}}</td>
         <td>{{row[6]}}</td>
+        <td>{{row[3]}}</td>
+        <td>{{row[2]}}</td>
+        <td>{{row[5]}}</td>
+        
     </tr>
     {% endfor %}
     </tbody>
