--- a/templates/loginSuccess_page.html
+++ b/templates/loginSuccess_page.html
@@ -93,8 +93,8 @@
         </div>
         <div id="register" class="admin-func">
             <form action="{{url_for('register_plan')}}" method="POST">
-                <p>Name: <input type="text" name="name" required></p>
-                <p>Tariff: <input type="number" name="tariff" required></p>
+                <p>Name: <input type="text" maxlength="30" name="name" required></p>
+                <p>Tariff: <input type="number" step="0.01" name="tariff" required></p>
                 <p>Validity: <input type="number" name="valid" required></p>
                 <p>Rental: <input type="text" name="rental" required></p>
                 <p>Type: <input type="radio" name="type" value="V" required>Voice <input type="radio" name="type" value="D" required>Data </p>
@@ -109,28 +109,11 @@
                         <option value="{{row[0]}}">{{row[0]}}</option>
                     {% endfor %}
                 </select>
-                <p>Name: <input type="text" name="name" required></p>
-                <p>Tariff: <input type="number" name="tariff" required></p>
-                <p>Validity: <input type="number" name="valid" required></p>
-                <p>Rental: <input type="text" name="rental" required></p>
-                <p>Type: <input type="radio" name="type" value="V" required>Voice <input type="radio" name="type" value="D" required>Data </p>
-            <form action="/admin_login/register" method="POST">
-                <p>Name: <input type="text" name="name" required></p>
+                <p>Name: <input type="text" maxlength="30" name="name" required></p>
                 <p>Tariff: <input type="number" step="0.01" name="tariff" required></p>
                 <p>Validity: <input type="number" name="valid" required></p>
                 <p>Rental: <input type="text" name="rental" required></p>
-                <p>Type: <input type="text" name="type" required></p>
-                <input type="submit" value="Add">
-            </form>
-        </div>
-        <div id="update" class="admin-func">
-            <form action="admin_login/update" method="POST">
-                <p>Plan ID: <input type="text" name="id" required></p>
-                <p>Name: <input type="text" name="name" required></p>
-                <p>Tariff: <input type="number" step="0.01" name="tariff" required></p>
-                <p>Validity: <input type="number" name="valid" required></p>
-                <p>Rental: <input type="text" name="rental" required></p>
-                <p>Type: <input type="text" name="type" required></p>
+                <p>Type: <input type="radio" name="type" value="Voice" required>Voice <input type="radio" name="type" value="Data" required>Data </p>
                 <input type="submit" value="Update">
             </form>
         </div>
@@ -142,8 +125,6 @@
                         <option value="{{row[0]}}">{{row[0]}}</option>
                     {% endfor %}
                 </select>
-            <form action="admin_login/disable" method="POST">
-                <p>Plan ID: <input type="text" name="id" required></p>
                 <input type="submit" value="Disable">
             </form>
         </div>
@@ -155,8 +136,6 @@
                         <option value="{{row[0]}}">{{row[0]}}</option>
                     {% endfor %}
                 </select>
-            <form action="admin_login/enable" method="POST">
-                <p>Plan ID: <input type="text" name="id" required></p>
                 <input type="submit" value="Enable">
             </form>
         </div>
@@ -168,31 +147,30 @@
                         <option value="{{row[0]}}">{{row[0]}}</option>
                     {% endfor %}
                 </select>
-            <form action="admin_login/delete" method="POST">
-                <p>Plan ID: <input type="text" name="id" required></p>
                 <input type="submit" value="Delete">
             </form>
         </div>
         <div id="display" class="admin-func">
             <table id="table">
             <tr>
+                <th>Plan ID</th>
                 <th>Name</th>
                 <th>Type</th>
                 <th>Validity</th>
                 <th>Tariff</th>
                 <th>Rental</th>
-                <th>Lastcol</th>
-                <th>Anothercol</th>
+                <th>Enable_Flag</th>
             </tr>
             {% for row in result %}
             <tr>
-                <td>{{row[1]}}</td>
-                <td>{{row[2]}}</td>
-                <td>{{row[4]}}</td>
-                <td>{{row[3]}}</td>
-                <td>{{row[5]}}</td>
-                <td>{{row[6]}}</td>
                 <td>{{row[0]}}</td>
+                <td>{{row[1]}}</td>
+                <td>{{row[6]}}</td>
+                <td>{{row[3]}}</td>
+                <td>{{row[2]}}</td>
+                <td>{{row[5]}}</td>
+                <td>{{row[4]}}</td>
+                
             </tr>
             {% endfor %}
             </table>
