Added SQL Query file

--- a/templates/loginSuccess_page.html
+++ b/templates/loginSuccess_page.html
@@ -97,7 +97,7 @@
                 <p>Tariff: <input type="number" step="0.01" name="tariff" required></p>
                 <p>Validity: <input type="number" name="valid" required></p>
                 <p>Rental: <input type="text" name="rental" required></p>
-                <p>Type: <input type="radio" name="type" value="V" required>Voice <input type="radio" name="type" value="D" required>Data </p>
+                <p>Type: <input type="radio" name="type" value="Voice" required>Voice <input type="radio" name="type" value="Data" required>Data </p>
                 <input type="submit" value="Register">
             </form>
         </div>
